gcc/testsuite/rust/rustc/ui/issues/issue-50688.rs
fn main() {
    [1; || {}]; // { dg-error ".E0308." "" { target *-*-* } }
}

